# konqlets

konqlets/: AUTHORS  konqlets.kdevelop
konqlets/src/: Makefile.am  konqlets.cpp  konqlets.desktop  konqlets.h  konqlets.lsm
konqlets/templates/: h
website/: index.xhtml  stylesheet.css  template.tpl  upload.sh
